typescript/checker/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts.stderr
error: jsc.taraget should be es5 or upper to use getter / setter
 --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts:4:9
  |
4 |     get Z() {
  |         ^

